--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
           name is <span class="marca">Neku</span></h1>
         <p>Fullstack developer...
           in progress</p>
-        <a href="#contacto"><button>CONTACT ME</button></a>
-        <a href="about_me.html"><button>ABOUT ME</button></a>
+          <div class="buttons_part_001">
+            <a href="#contacto"><button>CONTACT ME</button></a>
+            <a href="about_me.html"><button>ABOUT ME</button></a>
+          </div>
       </div>
       <div class="part_002">
         <img src="img/img_hero@2x.png" alt="img_hero">
@@ -174,7 +176,6 @@
                 
         <label for="mensaje">MESSAGE</label>
         <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea>
-        
       </form>
       <button class="button_contact" type="submit">SEND MESSAGE</button>
     </div>
